--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ inputs:
     required: true
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'hassansalem/ecs-cli:v1'
   args:
     - ${{ inputs.cluster }}
     - ${{ inputs.region }}
